--- a/scripts/config/prometheus/prometheus.yml
+++ b/scripts/config/prometheus/prometheus.yml
@@ -1,9 +1,7 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
-
-rule_files:
-  - "/etc/prometheus/rules/*.yml"
+  scrape_timeout: 10s
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -12,34 +10,42 @@ scrape_configs:
         labels:
           instance: "ec2-monitoring"
           service: "prometheus"
+          environment: "${ENVIRONMENT:-dev}"
 
   - job_name: 'node-exporter'
+    scrape_interval: 15s
     static_configs:
       - targets: ['node-exporter:9100']
         labels:
           instance: "ec2-monitoring"
           service: "node-exporter"
+          environment: "${ENVIRONMENT:-dev}"
       - targets: ['ec2-java-tomcat:9100']
         labels:
           instance: "ec2-java-tomcat"
           service: "node-exporter"
+          environment: "${ENVIRONMENT:-dev}"
 
   - job_name: 'java-tomcat'
     metrics_path: '/actuator/prometheus'
+    scrape_interval: 15s
     static_configs:
       - targets: ['ec2-java-tomcat:8080']
         labels:
           instance: "ec2-java-tomcat"
           service: "java-app"
           type: "application"
+          environment: "${ENVIRONMENT:-dev}"
 
   - job_name: 'tomcat-jmx'
+    scrape_interval: 15s
     static_configs:
       - targets: ['ec2-java-tomcat:9404']
         labels:
           instance: "ec2-java-tomcat"
           service: "tomcat"
           type: "jmx"
+          environment: "${ENVIRONMENT:-dev}"
 
   - job_name: 'cadvisor'
     scrape_interval: 5s
@@ -48,14 +54,36 @@ scrape_configs:
         labels:
           instance: "ec2-monitoring"
           service: "cadvisor"
-      - targets: ['ec2-java-tomcat:8081']
+          environment: "${ENVIRONMENT:-dev}"
+      - targets: ['cadvisor:8080']
         labels:
           instance: "ec2-java-tomcat"
           service: "cadvisor"
+          environment: "${ENVIRONMENT:-dev}"
 
   - job_name: 'grafana'
+    scrape_interval: 30s
     static_configs:
       - targets: ['grafana:3000']
         labels:
           instance: "ec2-monitoring"
           service: "grafana"
+          environment: "${ENVIRONMENT:-dev}"
+
+  - job_name: 'loki'
+    scrape_interval: 30s
+    static_configs:
+      - targets: ['loki:3100']
+        labels:
+          instance: "ec2-monitoring"
+          service: "loki"
+          environment: "${ENVIRONMENT:-dev}"
+
+  - job_name: 'promtail'
+    scrape_interval: 30s
+    static_configs:
+      - targets: ['promtail:9080']
+        labels:
+          instance: "ec2-monitoring"
+          service: "promtail"
+          environment: "${ENVIRONMENT:-dev}"
